<resources>
    <string name="app_name">Fit for Future</string>

    <string name="home_sync_data_btn">Sync Data with Server</string>
    <string name="home_stats_box_title">Statistics</string>
    <string name="stats_box_today_title">Unsynced scans</string>
    <string name="stats_box_self_title">Scanned in total</string>
    <string name="stats_box_type_title">Types registered</string>
    <string name="stats_box_today_value">-</string>
    <string name="stats_box_self_value">-</string>
    <string name="stats_box_type_value">-</string>

    <string name="home_recent_title">Recent Information</string>

    <string name="info_about_title">Information about Fit for Future</string>
    <string name="info_about_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</string>

    <string name="info_howto_title">How to use the scanner?</string>
    <string name="info_howto_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</string>

    <string name="info_sync_title">Synchronizing the data</string>
    <string name="info_sync_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At</string>

    <string name="title_settings">Settings</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_autosync_title">Auto-Sync</string>
    <string name="settings_autosync_subtitle">Try to syncronise the data is there is a good internet connection</string>

    <string name="scanned_subtitle">You\'re data has been saved.</string>

    <string name="scan">scan</string>
    <string name="id">insect id</string>
    <string name="coordinates">coordinates</string>
    <string name="date">date</string>
</resources>